Fix background and favicon not showing in Heroku

--- a/src/components/AccessModal/AccessModal.scss
+++ b/src/components/AccessModal/AccessModal.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Flag_of_Afghanistan_%281880%E2%80%931901%29.svg/2000px-Flag_of_Afghanistan_%281880%E2%80%931901%29.svg.png);
+  background-image: url(https://i.imgur.com/fKgaYeg.jpg);
   background-position: center top;
   background-size: cover;
   opacity: 0.8;
