--- a/src/components/SelectedMovie/SelectedMovie.scss
+++ b/src/components/SelectedMovie/SelectedMovie.scss
@@ -1,8 +1,6 @@
 .SelectedMovie__img--favorite {
   width: 100%;
   position: relative;
-  -webkit-filter: brightness(20%);
-  filter:brightness(80%);
   border-radius: 4px 4px 0 0;
   object-fit: cover;
   height: 400px;
